--- a/translations/kangyur/translations/088-034_toh539e,774,1074-the_dharani_for_polishing_a_gem.xml
+++ b/translations/kangyur/translations/088-034_toh539e,774,1074-the_dharani_for_polishing_a_gem.xml
@@ -15,7 +15,7 @@
                 <editor role="copyEditor" xml:id="UT22084-088-034-16">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -24,7 +24,7 @@
                     is a global non-profit initiative to translate all the
                     Buddha’s words into modern languages, and to make them
                     available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of
@@ -131,6 +131,12 @@
                 </change>
                 <change who="#andre" when="2024-07-11T14:52:11.163Z" type="text-version" status="1.0.2" xml:id="UT22084-088-034-53">
                     <desc>Glossary integration revised - activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2024-08-21T06:34:21.172Z" type="translation-status" status="1" xml:id="UT22084-088-034-54">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-08-21T06:34:21.172Z" type="text-version" status="1.0.3" xml:id="UT22084-088-034-55">
+                    <desc>Included in App v 3.17</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
