--- a/translations/kangyur/translations/090-023_toh579,935-the_dharani_of_the_essence_of_the_six_perfections.xml
+++ b/translations/kangyur/translations/090-023_toh579,935-the_dharani_of_the_essence_of_the_six_perfections.xml
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-023-79">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -30,7 +30,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -159,6 +159,12 @@
                 </change>
                 <change who="#andre" when="2024-07-11T15:04:44.022Z" type="text-version" status="1.0.2" xml:id="UT22084-090-023-84">
                     <desc>Glossary integration revised, activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2024-08-21T06:42:23.823Z" type="translation-status" status="1" xml:id="UT22084-090-023-85">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-08-21T06:42:23.823Z" type="text-version" status="1.0.3" xml:id="UT22084-090-023-86">
+                    <desc>Included in App v 3.17</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
