--- a/translations/kangyur/translations/090-025_toh581,937-the_dharani_for_obtaining_the_ten_perfections.xml
+++ b/translations/kangyur/translations/090-025_toh581,937-the_dharani_for_obtaining_the_ten_perfections.xml
@@ -18,13 +18,13 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-025-71">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all the Buddha’s words into modern languages, and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND (Attribution - Non-commercial - No-derivatives) 3.0 copyright. It may be copied or printed for fair use, but only
@@ -140,6 +140,12 @@
                 </change>
                 <change who="#konchog" when="2024-07-09T16:45:21.153Z" type="text-version" status="1.0.1" xml:id="UT22084-090-025-75">
                     <desc>Small proofing fixes throughout all sections.</desc>
+                </change>
+                <change who="#sameer" when="2024-08-21T06:49:45.946Z" type="translation-status" status="1" xml:id="UT22084-090-025-76">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-08-21T06:49:45.946Z" type="text-version" status="1.0.2" xml:id="UT22084-090-025-77">
+                    <desc>Included in App v 3.17</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
