--- a/translations/kangyur/translations/072-027_toh327-the_good_person.xml
+++ b/translations/kangyur/translations/072-027_toh327-the_good_person.xml
@@ -4,35 +4,32 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">skyes bu dam pa</title>
-                <title type="mainTitle" xml:lang="bo">སྐྱེས་བུ་དམ་པ།</title>
                 <title type="mainTitle" xml:lang="en">The Good Person</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Satpuruṣa</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་སྐྱེས་བུ་དམ་པའི་མདོ།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa skyes bu dam pa’i mdo</title>
+                <title type="mainTitle" xml:lang="bo">སྐྱེས་བུ་དམ་པ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">skyes bu dam pa</title>
                 <title type="longTitle" xml:lang="en">The Noble Sūtra on the Good Person</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­satpuruṣa­sūtra</title>
-                <title type="otherTitle" xml:lang="zh"/>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་སྐྱེས་བུ་དམ་པའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa skyes bu dam pa’i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-072-027-1"><!--Kagyu Translation Project Group--></author>
-                <consultant role="projectManager" xml:id="UT22084-072-027-2">Artur
-                    Przybysławski</consultant>
+                <consultant role="projectManager" xml:id="UT22084-072-027-2">Artur Przybysławski</consultant>
                 <author role="translatorEng" xml:id="UT22084-072-027-3">Artur Przybysławski</author>
-                <author role="translatorEng" xml:id="UT22084-072-027-4">Ācārya Choying
-                    Tendar</author>
+                <author role="translatorEng" xml:id="UT22084-072-027-4">Ācārya Choying Tendar</author>
                 <author role="translatorEng" xml:id="UT22084-072-027-5">Paul Partington</author>
                 <editor role="reviser" xml:id="UT22084-072-027-6">Artur Przybysławski</editor>
                 <editor role="reviser" xml:id="UT22084-072-027-7">Paul Partington</editor>
                 <editor role="proofreader" xml:id="UT22084-072-027-8">Artur Przybysławski</editor>
-                <author role="translatorEng" xml:id="UT22084-072-027-9">Phusar Penpa
-                    Dhondup</author>
+                <author role="translatorEng" xml:id="UT22084-072-027-9">Phusar Penpa Dhondup</author>
                 <editor role="proofreader" xml:id="UT22084-072-027-10">Paul Partington</editor>
                 <editor role="projectEditor" xml:id="UT22084-072-027-11">Rory Lindsay</editor>
                 <editor role="copyEditor" xml:id="UT22084-072-027-47">Dawn Collins</editor>
                 <editor role="projectEditor" xml:id="UT22084-072-027-65">George FitzHerbert</editor>
                 <editor role="TEImarkupEditor" xml:id="UT22084-072-027-84">Martina Cotter</editor>
+                <editor role="finalReviewer" xml:id="UT22084-072-027-173">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -40,7 +37,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -53,7 +50,7 @@
                 <idno xml:id="UT22084-072-027"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means
                     that these ids diverge slightly from the standard logic.</note>
-                <date>2024-06-09</date>
+                <date>2024-08-22</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh327" type="text">
@@ -181,6 +178,15 @@
                 </change>
                 <change who="#line-tofte" when="2024-06-18T07:10:53.413Z" type="text-version" status="0.0.2" xml:id="UT22084-072-027-158">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T08:43:06.647Z" type="text-version" status="0.0.3" xml:id="UT22084-072-027-174">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-08-22T13:15:58.546Z" type="translation-status" status="1.a" xml:id="UT22084-072-027-175">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-08-22T13:15:58.546Z" type="text-version" status="1.0.0" xml:id="UT22084-072-027-176">
+                    <desc>First published version.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -486,14 +492,6 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-072-027-143">
-                            <term type="translationMain">Anāthapiṇḍada</term>
-                            <term status="verified" xml:lang="Bo-Ltn" n="1">mgon med zas sbyin </term>
-                            <term xml:lang="bo" n="1">མགོན་མེད་ཟས་སྦྱིན།</term>
-                            <term type="attestedDictionary" status="verified" xml:lang="Sa-Ltn">anāthapiṇḍada</term>
-                        </gloss>
-                    </item>
-                    <item>
                         <gloss type="person" xml:id="UT22084-072-027-144">
                             <term type="translationMain">Bandé Paltsek</term>
                             <term status="verified" xml:lang="Bo-Ltn" n="1">ban de dpal brtseg </term>
@@ -538,10 +536,10 @@
                     </item>
                     <item>
                         <gloss type="place" xml:id="UT22084-072-027-148">
-                            <term type="translationMain">Prince Jeta’s Grove</term>
-                            <term status="verified" xml:lang="Bo-Ltn" n="1">rgyal bu rgyal byed kyi tshal </term>
-                            <term xml:lang="bo" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                            <term type="attestedDictionary" status="verified" xml:lang="Sa-Ltn">jetavana</term>
+                        <term type="translationMain">Prince Jeta’s Grove, Anāthapiṇḍada’s park</term>
+                        <term status="verified" xml:lang="Bo-Ltn" n="1">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
+                        <term type="attestedDictionary" status="verified" xml:lang="Sa-Ltn">jetavanam anāthapiṇḍadasyārāmaḥ</term>
                         </gloss>
                     </item>
                     <item>
