--- a/translations/kangyur/placeholders/091-033_toh636,876-the_incantation_of_the_one_hundred_and_eight_names_of_khagarbha_the_bodhisattva_khagarbha__kasagarbha.xml
+++ b/translations/kangyur/placeholders/091-033_toh636,876-the_incantation_of_the_one_hundred_and_eight_names_of_khagarbha_the_bodhisattva_khagarbha__kasagarbha.xml
@@ -15,11 +15,11 @@
                 <title type="otherTitle" xml:lang="en">[Note: the bodhisattva Khagarbha = Ākāśagarbha]</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-033"/>
             </publicationStmt>
             <sourceDesc>
@@ -50,6 +50,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-02T12:56:25.973Z" type="text-version" status="0.0.2" xml:id="UT22084-091-033-2">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T13:58:10.618Z" type="translation-status" status="3" xml:id="UT22084-091-033-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T13:58:10.618Z" type="text-version" status="0.0.3" xml:id="UT22084-091-033-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
