--- a/translations/kangyur/placeholders/091-075_toh677,864-the_incantation_of_amitabha.xml
+++ b/translations/kangyur/placeholders/091-075_toh677,864-the_incantation_of_amitabha.xml
@@ -13,11 +13,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Bhagavadamitābhadhāraṇīmantra</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-075"/>
             </publicationStmt>
             <sourceDesc>
@@ -48,6 +48,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-02T08:45:25.305Z" type="text-version" status="0.0.2" xml:id="UT22084-091-075-2">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T14:01:51.42Z" type="translation-status" status="3" xml:id="UT22084-091-075-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T14:01:51.42Z" type="text-version" status="0.0.3" xml:id="UT22084-091-075-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
