--- a/translations/kangyur/placeholders/096-002_toh753,955-the_incantation_unimpeded_minute_vajras.xml
+++ b/translations/kangyur/placeholders/096-002_toh753,955-the_incantation_unimpeded_minute_vajras.xml
@@ -14,11 +14,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Vajrasūkṣmāpratihatānāmadhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-002"/>
             </publicationStmt>
             <sourceDesc>
@@ -49,6 +49,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T09:31:45.564Z" type="text-version" status="0.0.2" xml:id="UT22084-096-002-2">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T14:04:05.252Z" type="translation-status" status="3" xml:id="UT22084-096-002-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T14:04:05.252Z" type="text-version" status="0.0.3" xml:id="UT22084-096-002-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
