--- a/translations/kangyur/placeholders/096-004_toh755,957-the_incantation_the_fourfold_essence_of_kundalyamrta.xml
+++ b/translations/kangyur/placeholders/096-004_toh755,957-the_incantation_the_fourfold_essence_of_kundalyamrta.xml
@@ -13,11 +13,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryakuṇḍalyamṛta­hṛdayacatuṣṭayanāma­dhāraṇī</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-004"/>
             </publicationStmt>
             <sourceDesc>
@@ -48,6 +48,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T09:36:41.871Z" type="text-version" status="0.0.2" xml:id="UT22084-096-004-2">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T14:06:02.369Z" type="translation-status" status="3" xml:id="UT22084-096-004-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T14:06:02.369Z" type="text-version" status="0.0.3" xml:id="UT22084-096-004-4">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
