--- a/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
+++ b/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-087-002-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-087-002"/>
                 <date/>
             </publicationStmt>
@@ -102,6 +102,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-02T09:11:48.03Z" type="text-version" status="0.0.12" xml:id="UT22084-087-002-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T14:56:27.961Z" type="translation-status" status="2.b" xml:id="UT22084-087-002-29">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T14:56:27.961Z" type="text-version" status="0.0.13" xml:id="UT22084-087-002-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
