--- a/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
@@ -15,11 +15,11 @@
                 <editor role="copyEditor" xml:id="UT22084-091-057-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-091-057"/>
                 <date/>
             </publicationStmt>
@@ -100,6 +100,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-01T15:20:49.214Z" type="text-version" status="0.0.12" xml:id="UT22084-091-057-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T14:58:35.509Z" type="translation-status" status="2.b" xml:id="UT22084-091-057-29">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T14:58:35.509Z" type="text-version" status="0.0.13" xml:id="UT22084-091-057-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
