--- a/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
@@ -16,11 +16,11 @@
                 <editor role="copyEditor" xml:id="UT22084-091-058-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-091-058"/>
                 <date/>
             </publicationStmt>
@@ -101,6 +101,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-01T15:30:09.063Z" type="text-version" status="0.0.12" xml:id="UT22084-091-058-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T15:00:09.457Z" type="translation-status" status="2.b" xml:id="UT22084-091-058-29">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T15:00:09.457Z" type="text-version" status="0.0.13" xml:id="UT22084-091-058-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
