--- a/translations/kangyur/placeholders/093-006_toh691,897-the_incantation_of_the_thousandarmed_thousandeyed_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-006_toh691,897-the_incantation_of_the_thousandarmed_thousandeyed_avalokitesvara.xml
@@ -15,11 +15,11 @@
                 <sponsor xml:id="UT22084-093-006-3">George Gu, May E Ho Gu, Likai Gu, Lilian Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-093-006"/>
                 <date/>
             </publicationStmt>
@@ -71,6 +71,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:08:38.076Z" type="text-version" status="0.0.3" xml:id="UT22084-093-006-12">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T15:44:02.184Z" type="translation-status" status="2.h" xml:id="UT22084-093-006-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-22T15:44:02.184Z" type="text-version" status="0.0.4" xml:id="UT22084-093-006-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
