--- a/translations/kangyur/translations/072-027_toh327-the_good_person.xml
+++ b/translations/kangyur/translations/072-027_toh327-the_good_person.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-027-173">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -188,6 +188,9 @@
                 <change who="#martina-cotter" when="2024-08-22T13:15:58.546Z" type="text-version" status="1.0.0" xml:id="UT22084-072-027-176">
                     <desc>First published version.</desc>
                 </change>
+                <change who="#konchog" when="2024-08-22T18:15:45.499Z" type="text-version" status="1.0.1" xml:id="UT22084-072-027-177">
+                    <desc>A few minor adjustments after Dawn's review.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -221,7 +224,7 @@
                         <title xml:lang="en">The Good Person</title>
                         <note place="end" xml:id="UT22084-072-027-156">In this text, this is a person who practices the five ways of giving.</note> is a concise sūtra on
                         karma in which the Buddha explains the results of generosity. He lists five
-                        ways in which gifts are given: trustfully, respectfully, with one’s own
+                        ways in which gifts are given: with trust, respectfully, with one’s own
                         hands, at the right time,<note place="end" xml:id="UT22084-072-027-91"> As
                             McCombs points out, “giving ‘respectfully,’ ‘from one’s own hand,’ and
                             ‘at the right time’ are customs of South Asian gift etiquette” (McCombs
@@ -233,7 +236,7 @@
                                 śraddhayā dānaṃ dadāti satkṛtya svahastena kālena parān anupahatya /
                                 idaṃ bodhisattvasya satpuruṣasya satpuruṣa­dānam ity ucyate
                                 /</foreign>]. Cf. also the interpretation of that fragment in
-                            McCombs (2014), p. 265f.</note> Since this analysis does not refer to
+                            McCombs (2014), p. 265ff.</note> Since this analysis does not refer to
                         key karmic factors such as intent, but rather to the ways in which gifts are
                         given, the differences between the karmic results of each type of giving are
                         relatively minor.</p>
@@ -358,7 +361,7 @@
                     <head type="colophon" tid="31">Colophon</head>
                     <milestone unit="chunk" xml:id="UT22084-072-027-116"/>
                     <p tid="32">Translated by the Indian preceptor Dharmākara and the translator Bandé
-                        Zangkyong and revised by Bandé Paltsek.</p>
+                        Zangkyong, and revised by Bandé Paltsek.</p>
                 </div>
             </div>
         </body>
@@ -411,7 +414,7 @@
                             Ornament of Liberation: The Wish-fulfilling Gem of the Noble
                             Teachings</title>. Translated by Khenpo Konchog Gyaltsen Rinpoche.
                         Ithaca: Snow Lion Publications, 1998.</bibl>
-                    <bibl xml:id="UT22084-072-027-125">Thanissaro Bhikkhu, trans., <title xml:lang="en">Sappurisadana Sutta: A Person of Integrity’s
+                    <bibl xml:id="UT22084-072-027-125">Thanissaro Bhikkhu, tr. <title xml:lang="en">Sappurisadana Sutta: A Person of Integrity’s
                         Gifts</title>, <ref target="https://www.accesstoinsight.org/tipitaka/an/an05/an05.148.than.html">https://www.accesstoinsight.org/tipitaka/an/an05/an05.148.than.html</ref>.
                         Last modified 3 July 2010.</bibl>
                     <bibl xml:id="UT22084-072-027-126">Wogihara, Unrai. <title xml:lang="en">Bodhisattvabhūmi: A Statement of the Whole Course of the
