--- a/translations/tengyur/placeholders/066-033_toh2623-srisarvarahasyanibandharahasyapradipanama.xml
+++ b/translations/tengyur/placeholders/066-033_toh2623-srisarvarahasyanibandharahasyapradipanama.xml
@@ -10,12 +10,12 @@
                 <title xml:lang="en" type="mainTitle">Explanations Connected to the “Universal Secret Tantra” called “The Lamp of Secrets”</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT23703-066-033"/>
             </publicationStmt>
             <sourceDesc>
@@ -43,6 +43,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT23703-066-033-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-23T06:44:38.208Z" type="translation-status" status="3" xml:id="UT23703-066-033-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-23T06:44:38.208Z" type="text-version" status="0.0.3" xml:id="UT23703-066-033-8">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
