--- a/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
+++ b/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
@@ -9,16 +9,17 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje gshed nag po'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Sarvatathāga­takāyavakcittakṛṣna­yamārināmatantra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi sku gsung thugs gshin rje gshed nag po zhes bya ba'i rgyud/</title>
-                <author role="translatorMain" xml:id="UT22084-083-015-1"/>
+                <author role="translatorMain" xml:id="UT22084-083-015-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-083-015-2">Bruno Galasek-Hul</author>
+                <editor role="projectEditor" xml:id="UT22084-083-015-18">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-083-015"/>
                 <date/>
             </publicationStmt>
@@ -72,6 +73,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-20T13:27:27.697Z" type="text-version" status="0.0.8" xml:id="UT22084-083-015-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-20T13:28:00.488Z" type="text-version" status="0.0.9" xml:id="UT22084-083-015-19">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-23T11:15:16.222Z" type="translation-status" status="2.f" xml:id="UT22084-083-015-20">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-23T11:15:16.222Z" type="text-version" status="0.0.10" xml:id="UT22084-083-015-21">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
