--- a/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -11,13 +11,14 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug gi mtshan brgya rtsa brgyad pa/</title>
                 <author role="translatorMain" xml:id="UT22084-093-020-8">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-093-020-9">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT22084-093-020-18">Torsten Gerloff</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-093-020"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +81,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-11T12:40:59.061Z" type="text-version" status="0.0.8" xml:id="UT22084-093-020-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-11T12:43:41.675Z" type="text-version" status="0.0.9" xml:id="UT22084-093-020-19">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-23T11:23:38.25Z" type="translation-status" status="2.f" xml:id="UT22084-093-020-20">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-23T11:23:38.25Z" type="text-version" status="0.0.10" xml:id="UT22084-093-020-21">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
