--- a/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -11,13 +11,14 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug gi mtshan brgya rtsa brgyad pa zhes bya ba/</title>
                 <author role="translatorMain" xml:id="UT22084-093-021-8">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-093-021-9">Catherine Dalton</author>
+                <editor role="reviser" xml:id="UT22084-093-021-17">Torsten Gerloff</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-093-021"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +69,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-11T12:42:17.159Z" type="text-version" status="0.0.7" xml:id="UT22084-093-021-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-11T12:43:12.498Z" type="text-version" status="0.0.8" xml:id="UT22084-093-021-18">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-23T11:27:14.324Z" type="translation-status" status="2.f" xml:id="UT22084-093-021-19">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-23T11:27:14.324Z" type="text-version" status="0.0.9" xml:id="UT22084-093-021-20">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
