--- a/translations/kangyur/translations/071-006_toh292-the_mah%C4%81s%C5%ABtra_%E2%80%9Cthe_crest_insignia%E2%80%9D_1.xml
+++ b/translations/kangyur/translations/071-006_toh292-the_mah%C4%81s%C5%ABtra_%E2%80%9Cthe_crest_insignia%E2%80%9D_1.xml
@@ -21,7 +21,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-071-006-214">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -30,7 +30,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="2">
+                                <availability status="1.a">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -46,7 +46,7 @@
                                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                                <date>2024-06-10</date>
+                                <date>2024-08-23</date>
                         </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh292" type="text">
@@ -140,6 +140,12 @@
                 </change>
                 <change who="#john" when="2024-08-23T14:35:18.514Z" type="text-version" status="0.0.6" xml:id="UT22084-071-006-1504">
                     <desc>Further edits, now ready for publication.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-08-23T16:45:23.746Z" type="translation-status" status="1.a" xml:id="UT22084-071-006-1505">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-08-23T16:45:23.746Z" type="text-version" status="1.0.0" xml:id="UT22084-071-006-1506">
+                    <desc>First published version.</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
