--- a/translations/tengyur/placeholders/066-033_toh2623-srisarvarahasyanibandharahasyapradipanama.xml
+++ b/translations/tengyur/placeholders/066-033_toh2623-srisarvarahasyanibandharahasyapradipanama.xml
@@ -4,18 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title xml:lang="en" type="mainTitle">Explanations Connected to the “Universal Secret Tantra” called “The Lamp of Secrets”</title>
+                <title xml:lang="Sa-Ltn" type="mainTitle">Śrī­sarvarahasya­nibandha­rahasya­pradīpa­nāma</title>
                 <title xml:lang="bo" type="mainTitle">དཔལ་ཐམས་ཅད་གསང་བའི་བཤད་སྦྱར་གསང་བའི་སྒྲོན་མ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">dpal thams cad gsang ba'i bshad sbyar gsang ba'i sgron ma/</title>
-                <title xml:lang="Sa-Ltn" type="mainTitle">Śrī­sarvarahasya­nibandha­rahasya­pradīpa­nāma</title>
-                <title xml:lang="en" type="mainTitle">Explanations Connected to the “Universal Secret Tantra” called “The Lamp of Secrets”</title>
+                <author role="translatorMain" xml:id="UT23703-066-033-9">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT23703-066-033-10">Wiesiek Mical</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="4"/>
                 <idno xml:id="UT23703-066-033"/>
             </publicationStmt>
             <sourceDesc>
@@ -48,6 +50,15 @@
                     <desc>3</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-23T06:44:38.208Z" type="text-version" status="0.0.3" xml:id="UT23703-066-033-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-23T06:46:09.898Z" type="text-version" status="0.0.4" xml:id="UT23703-066-033-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-26T08:51:05.95Z" type="translation-status" status="4" xml:id="UT23703-066-033-12">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-26T08:51:05.95Z" type="text-version" status="0.0.5" xml:id="UT23703-066-033-13">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
