--- a/translations/kangyur/placeholders/059-001_toh158-the_sutra_of_the_questions_of_brahma.xml
+++ b/translations/kangyur/placeholders/059-001_toh158-the_sutra_of_the_questions_of_brahma.xml
@@ -14,13 +14,14 @@
                 <author role="translatorEng" xml:id="UT22084-059-001-3">Jed Forman</author>
                 <consultant role="projectManager" xml:id="UT22084-059-001-4">Jed Forman</consultant>
                 <editor role="projectEditor" xml:id="UT22084-059-001-21">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-059-001-34">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-059-001"/>
                 <date/>
             </publicationStmt>
@@ -88,6 +89,15 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-07T10:58:47.166Z" type="text-version" status="0.0.11" xml:id="UT22084-059-001-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-07T10:59:22.144Z" type="text-version" status="0.0.12" xml:id="UT22084-059-001-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T12:48:11.671Z" type="translation-status" status="2.b" xml:id="UT22084-059-001-36">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T12:48:11.671Z" type="text-version" status="0.0.13" xml:id="UT22084-059-001-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
