--- a/translations/kangyur/placeholders/043-016_toh79-the_sutra_teaching_the_unfathomable_sphere_of_a_buddha.xml
+++ b/translations/kangyur/placeholders/043-016_toh79-the_sutra_teaching_the_unfathomable_sphere_of_a_buddha.xml
@@ -7,21 +7,22 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra Teaching the Unfathomable Sphere of a Buddha</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Acintyabuddhaviṣayanirdeśasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi yul bsam gyis mi khyab pa bstan pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="zh">《說佛國不思議經》(大正藏:《大寶積經善德天子會第三十五》)</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryācintyabuddhaviṣaya­nirdeśa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas kyi yul bsam gyis mi khyab pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《說佛國不思議經》(大正藏:《大寶積經善德天子會第三十五》)</title>
                 <author role="translatorMain" xml:id="UT22084-043-016-1">UCSB Buddhist Studies Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-043-016-2">ErdeneBaatar Erdene-Ochir</author>
                 <author role="translatorEng" xml:id="UT22084-043-016-3">Jed Forman</author>
                 <editor role="projectEditor" xml:id="UT22084-043-016-17">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-043-016-31">Konchog Norbu</editor>
                 <sponsor xml:id="UT22084-043-016-21">Aron Csondes</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-043-016"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +91,15 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-04T10:07:26.211Z" type="text-version" status="0.0.12" xml:id="UT22084-043-016-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T10:07:57.11Z" type="text-version" status="0.0.13" xml:id="UT22084-043-016-32">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T12:53:26.653Z" type="translation-status" status="2.c" xml:id="UT22084-043-016-33">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T12:53:26.653Z" type="text-version" status="0.0.14" xml:id="UT22084-043-016-34">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
