--- a/translations/kangyur/placeholders/076-013_toh359-the_sutra_of_the_twelve_eyes.xml
+++ b/translations/kangyur/placeholders/076-013_toh359-the_sutra_of_the_twelve_eyes.xml
@@ -21,11 +21,11 @@
                 <author role="translatorEng" xml:id="UT22084-076-013-10">Sam Go</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-076-013"/>
                 <date/>
             </publicationStmt>
@@ -56,6 +56,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-076-013-15">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T13:24:18.078Z" type="translation-status" status="2.h" xml:id="UT22084-076-013-16">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T13:24:18.078Z" type="text-version" status="0.0.5" xml:id="UT22084-076-013-17">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
