--- a/translations/kangyur/placeholders/081-009_toh440-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/placeholders/081-009_toh440-the_tantra_of_mahakala.xml
@@ -16,12 +16,12 @@
                 <sponsor xml:id="UT22084-081-009-4">Lina Herlintje</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.9 <date>2024</date>
+                <edition>v 0.1.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-081-009"/>
                 <date/>
             </publicationStmt>
@@ -78,6 +78,12 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-07T11:18:50.344Z" type="text-version" status="0.1.9" xml:id="UT22084-081-009-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T13:34:57.525Z" type="translation-status" status="2.f" xml:id="UT22084-081-009-19">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T13:34:57.525Z" type="text-version" status="0.1.10" xml:id="UT22084-081-009-20">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
