--- a/translations/kangyur/placeholders/072-016_toh316-the_sutra_on_the_four_truths.xml
+++ b/translations/kangyur/placeholders/072-016_toh316-the_sutra_on_the_four_truths.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryacatuḥsatyasūtra</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status=""/>
                 <idno xml:id="UT22084-072-016"/>
                 <date/>
             </publicationStmt>
@@ -46,6 +46,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-072-016-5">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T13:49:20.771Z" type="translation-status" status="" xml:id="UT22084-072-016-6">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T13:49:20.771Z" type="text-version" status="0.0.5" xml:id="UT22084-072-016-7">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
