--- a/translations/kangyur/placeholders/090-014_toh570,991-the_incantation_of_hiranyavati.xml
+++ b/translations/kangyur/placeholders/090-014_toh570,991-the_incantation_of_hiranyavati.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-090-014-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-090-014"/>
                 <date/>
             </publicationStmt>
@@ -63,6 +63,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T10:49:10.803Z" type="text-version" status="0.0.5" xml:id="UT22084-090-014-9">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T14:32:27.157Z" type="translation-status" status="2.g" xml:id="UT22084-090-014-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T14:32:27.157Z" type="text-version" status="0.0.6" xml:id="UT22084-090-014-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
