--- a/translations/kangyur/placeholders/090-016_toh572,993-the_queen_of_spells_anguli.xml
+++ b/translations/kangyur/placeholders/090-016_toh572,993-the_queen_of_spells_anguli.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-090-016-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-090-016"/>
                 <date/>
             </publicationStmt>
@@ -65,6 +65,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T10:56:30.318Z" type="text-version" status="0.0.5" xml:id="UT22084-090-016-9">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T14:35:02.649Z" type="translation-status" status="2.g" xml:id="UT22084-090-016-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T14:35:02.649Z" type="text-version" status="0.0.6" xml:id="UT22084-090-016-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
