--- a/translations/tengyur/placeholders/045-013_toh1915-caturdevatapariprcchavyakhyanopadesapaustika.xml
+++ b/translations/tengyur/placeholders/045-013_toh1915-caturdevatapariprcchavyakhyanopadesapaustika.xml
@@ -9,8 +9,12 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Catur­devatā­paripṛcchā­vyākhyāna­upadeśa­pauṣṭika­nāma</title>
                 <title xml:lang="en" type="mainTitle">An Explanation of the “Questions of the Four Goddesses” Tantra called “Extensive Personal Instructions”</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT23703-045-013"/>
             </publicationStmt>
             <sourceDesc>
@@ -34,6 +38,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-045-013-4">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-29T14:23:45.41Z" type="translation-status" status="3" xml:id="UT23703-045-013-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-29T14:23:45.41Z" type="text-version" status="0.0.1" xml:id="UT23703-045-013-6">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
