--- a/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -14,11 +14,11 @@
                 <editor role="projectEditor" xml:id="UT22084-093-020-18">Torsten Gerloff</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-093-020"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +90,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-23T11:23:38.25Z" type="text-version" status="0.0.10" xml:id="UT22084-093-020-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T08:50:31.691Z" type="translation-status" status="2.e" xml:id="UT22084-093-020-22">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T08:50:31.691Z" type="text-version" status="0.0.11" xml:id="UT22084-093-020-23">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
