--- a/translations/kangyur/placeholders/088-027_toh533,860-the_incantation_the_essence_of_sakyamuni.xml
+++ b/translations/kangyur/placeholders/088-027_toh533,860-the_incantation_the_essence_of_sakyamuni.xml
@@ -15,11 +15,11 @@
                 <editor role="projectEditor" xml:id="UT22084-088-027-33">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2024</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-088-027"/>
                 <date/>
             </publicationStmt>
@@ -109,6 +109,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-12T08:30:37.873Z" type="text-version" status="0.0.14" xml:id="UT22084-088-027-36">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T09:12:06.121Z" type="translation-status" status="2.a" xml:id="UT22084-088-027-37">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T09:12:06.121Z" type="text-version" status="0.0.15" xml:id="UT22084-088-027-38">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
