--- a/translations/kangyur/placeholders/083-019_toh471,2006-the_practice_of_the_legend.xml
+++ b/translations/kangyur/placeholders/083-019_toh471,2006-the_practice_of_the_legend.xml
@@ -14,13 +14,13 @@
                 <editor role="copyEditor" xml:id="UT22084-083-019-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-083-019"/>
-                </publicationStmt>
+            </publicationStmt>
             <sourceDesc>
                 <bibl key="toh471" type="text">
                     <ref>Toh 471</ref>
@@ -34,7 +34,7 @@
                 <bibl key="toh2006" type="text">
                     <ref>Toh 2006</ref>
                     <biblScope>ff. 213v-214r</biblScope>
-                    <author xml:lang="Sa-Ltn" xml:id="UT23703-047-083-1">Tathāgatarakṣita</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT22084-083-019-26">Tathāgatarakṣita</author>
                     <location work="UT23703" count-pages="2">
                         <volume number="47" start-page="424" end-page="425"/>
                     </location>
@@ -91,6 +91,12 @@
                 </change>
                 <change who="#celso" when="2024-08-12T15:51:51.999Z" type="text-version" status="0.0.11" xml:id="UT22084-083-019-25">
                     <desc>merged with Toh 2006</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T11:32:41.842Z" type="translation-status" status="2.c" xml:id="UT22084-083-019-27">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T11:32:41.842Z" type="text-version" status="0.0.12" xml:id="UT22084-083-019-28">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
