--- a/translations/kangyur/placeholders/096-072_toh823,1106-auspiciousness_for_the_three_families.xml
+++ b/translations/kangyur/placeholders/096-072_toh823,1106-auspiciousness_for_the_three_families.xml
@@ -12,11 +12,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-072-10">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-096-072"/>
             </publicationStmt>
             <sourceDesc>
@@ -80,6 +80,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-08T07:33:07.69Z" type="text-version" status="0.0.4" xml:id="UT22084-096-072-14">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T12:14:32.132Z" type="translation-status" status="2.f" xml:id="UT22084-096-072-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T12:14:32.132Z" type="text-version" status="0.0.5" xml:id="UT22084-096-072-16">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
