--- a/translations/kangyur/placeholders/096-074_toh825-auspiciousness_for_the_three_families.xml
+++ b/translations/kangyur/placeholders/096-074_toh825-auspiciousness_for_the_three_families.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-074-9">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-096-074"/>
             </publicationStmt>
             <sourceDesc>
@@ -65,6 +65,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-16T08:35:45.61Z" type="text-version" status="0.0.3" xml:id="UT22084-096-074-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T12:15:54.161Z" type="translation-status" status="2.f" xml:id="UT22084-096-074-13">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T12:15:54.161Z" type="text-version" status="0.0.4" xml:id="UT22084-096-074-14">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
