--- a/translations/kangyur/placeholders/091-082_toh684-the_incantation_the_questions_of_narayana.xml
+++ b/translations/kangyur/placeholders/091-082_toh684-the_incantation_the_questions_of_narayana.xml
@@ -16,11 +16,11 @@
                 <author role="translatorEng" xml:id="UT22084-091-082-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-091-082"/>
                 <date/>
             </publicationStmt>
@@ -28,12 +28,13 @@
                 <bibl key="toh684" type="text">
                     <ref>Toh 684</ref>
                     <biblScope>vol.91, ff.287v-290r (pp.573-578)</biblScope>
-                    <location work="UT4CZ5369" count-pages="4">
+                    <location work="UT4CZ5369" count-pages="6">
                         <volume number="91" start-page="576" end-page="581"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12422" work="W22084"/>
                 </bibl>
+                
             </sourceDesc>
             <notesStmt/>
             <revisionDesc>
@@ -57,6 +58,15 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-091-082-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T12:08:23.959Z" type="text-version" status="0.0.6" xml:id="UT22084-091-082-12">
+                    <desc>Auto (update-locations)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T12:30:55.394Z" type="translation-status" status="2.h" xml:id="UT22084-091-082-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T12:30:55.394Z" type="text-version" status="0.0.7" xml:id="UT22084-091-082-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
