--- a/translations/kangyur/placeholders/090-020_toh576,932-the_incantation_of_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-020_toh576,932-the_incantation_of_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-090-020-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-090-020"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +68,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:42:46.922Z" type="text-version" status="0.0.6" xml:id="UT22084-090-020-12">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T13:12:20.086Z" type="translation-status" status="2.h" xml:id="UT22084-090-020-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T13:12:20.086Z" type="text-version" status="0.0.7" xml:id="UT22084-090-020-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
