--- a/translations/kangyur/placeholders/096-011_toh762-the_incantation_of_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-011_toh762-the_incantation_of_lohatunda.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-011-5">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-096-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -45,6 +45,12 @@
                 </change>
                 <change who="#line-tofte" when="2023-12-22T10:24:32.513Z" type="text-version" status="0.0.2" xml:id="UT22084-096-011-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T09:44:26.773Z" type="translation-status" status="2.g" xml:id="UT22084-096-011-7">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-02T09:44:26.773Z" type="text-version" status="0.0.3" xml:id="UT22084-096-011-8">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
